--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <title>Kotokk - Quantium tools</title>
     <link rel="icon" type="image/png" href="website-icon.png" />
     <link rel="stylesheet" href="styles.css" />
-    <meta name="description" content="A small website with some shitty tools: age calculator, fake server stats, name checker, weather app and a calculator." />
+    <meta name="description" content="A simple website with some shitty tools: age calculator, fake server stats, name checker, weather app and a calculator. The program was originally written in Python and later rewritten as a web version." />
 </head>
 <body>
     <div class="app-container">
@@ -20,6 +20,7 @@
                     <div class="dropdown-item" onclick="showFrame('name')">🧑 Check Name</div>
                     <div class="dropdown-item" onclick="showFrame('fakescan')">📟 Server Stats</div>
                     <div class="dropdown-item" onclick="showFrame('calc')">🖩 Calculator</div>
+                    <div class="dropdown-item"><a href="https://github.com/Kotok7/Quantium-tools" target="_blank" rel="noopener noreferrer">GitHub</a></div>
                 </div>
             </button>
         </div>
