--- a/website/index-pl.html
+++ b/website/index-pl.html
@@ -11,6 +11,9 @@
 <body>
     <div class="app-container">
         <div class="title-bar">Narzędzia Quantium</div>
+              <a href="index.html" class="icon-link">
+        <img src="united-states.png" alt="Translate to English" title="Translate to English" loading="lazy">
+      </a>
         <div class="menu-bar">
             <button class="menu-button" onclick="toggleDropdown(event)">
                 🎛 Opcje
