--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="app-container">
         <div class="title-bar">Quantium tools</div>
+              <a href="index-pl.html" class="icon-link">
+        <img src="poland.png" alt="Przetłumacz na Polski" title="Przetłumacz na Polski" loading="lazy">
+      </a>
         <div class="menu-bar">
             <button class="menu-button" onclick="toggleDropdown(event)">
                 🎛 Options
