--- a/website/index-pl.html
+++ b/website/index-pl.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="app-container">
-        <div class="title-bar">Narzędzia Quantium</div>
+        <div class="title-bar">Narzędzia kwantowe</div>
               <a href="index.html" class="icon-link">
         <img src="united-states.png" alt="Translate to English" title="Translate to English" loading="lazy">
       </a>
