added copyright info

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,15 @@
 </head>
 <body>
     <div class="app-container">
-        <div class="title-bar">Quantium tools</div>
+<div class="title-bar">
+  <div class="left">Quantium tools</div>
+  <div class="right">
+    <p style="margin: 0;">
+      &copy; 2025 <a style="color: #5b84c6;" href="https://kotokk.dev">kotokk.dev</a><br>
+      All rights reserved.
+    </p>
+  </div>
+</div>
               <a href="index-pl.html" class="icon-link">
         <img src="poland.png" alt="Przetłumacz na Polski" title="Przetłumacz na Polski" loading="lazy">
       </a>
@@ -24,6 +32,7 @@
                     <div class="dropdown-item" onclick="showFrame('fakescan')">📟 Server Stats</div>
                     <div class="dropdown-item" onclick="showFrame('calc')">🖩 Calculator</div>
                     <div class="dropdown-item"><a href="https://github.com/Kotok7/Quantium-tools" target="_blank" rel="noopener noreferrer">GitHub</a></div>
+                    <div class="dropdown-item"><a href="/" target="_blank" rel="noopener noreferrer">Back to main page</a></div>
                 </div>
             </button>
         </div>
