changed misspelled "quantium" to "quantum"
+ additional fixes

--- a/website/index-pl.html
+++ b/website/index-pl.html
@@ -11,11 +11,11 @@
 <body>
     <div class="app-container">
 <div class="title-bar">
-  <div class="left">Quantium tools</div>
+  <div class="left">Narzędzia kwantowe</div>
   <div class="right">
     <p style="margin: 0;">
       &copy; 2025 <a style="color: #5b84c6;" href="https://kotokk.dev">kotokk.dev</a><br>
-      All rights reserved.
+      Wszelkie prawa zastrzeżone.
     </p>
   </div>
 </div>
@@ -31,7 +31,7 @@
                     <div class="dropdown-item" onclick="showFrame('name')">🧑 Sprawdź imię</div>
                     <div class="dropdown-item" onclick="showFrame('fakescan')">📟 Statystyki serwera</div>
                     <div class="dropdown-item" onclick="showFrame('calc')">🖩 Kalkulator</div>
-                    <div class="dropdown-item"><a href="https://github.com/Kotok7/Quantium-tools" target="_blank" rel="noopener noreferrer">GitHub</a></div>
+                    <div class="dropdown-item"><a href="https://github.com/Kotok7/Quantum-tools" target="_blank" rel="noopener noreferrer">GitHub</a></div>
                     <div class="dropdown-item"><a href="/" target="_blank" rel="noopener noreferrer">Wróć do strony głównej</a></div>
                 </div>
             </button>
