changed misspelled "quantium" to "quantum"
+ additional fixes

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kotokk - Quantium tools</title>
+    <title>Kotokk - Quantum tools</title>
     <link rel="icon" type="image/png" href="website-icon.png" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="description" content="A simple website with some shitty tools: age calculator, fake server stats, name checker, weather app and a calculator. The program was originally written in Python and later rewritten as a web version." />
@@ -11,7 +11,7 @@
 <body>
     <div class="app-container">
 <div class="title-bar">
-  <div class="left">Quantium tools</div>
+  <div class="left">Quantum tools</div>
   <div class="right">
     <p style="margin: 0;">
       &copy; 2025 <a style="color: #5b84c6;" href="https://kotokk.dev">kotokk.dev</a><br>
@@ -31,7 +31,7 @@
                     <div class="dropdown-item" onclick="showFrame('name')">🧑 Check Name</div>
                     <div class="dropdown-item" onclick="showFrame('fakescan')">📟 Server Stats</div>
                     <div class="dropdown-item" onclick="showFrame('calc')">🖩 Calculator</div>
-                    <div class="dropdown-item"><a href="https://github.com/Kotok7/Quantium-tools" target="_blank" rel="noopener noreferrer">GitHub</a></div>
+                    <div class="dropdown-item"><a href="https://github.com/Kotok7/Quantum-tools" target="_blank" rel="noopener noreferrer">GitHub</a></div>
                     <div class="dropdown-item"><a href="/" target="_blank" rel="noopener noreferrer">Back to main page</a></div>
                 </div>
             </button>
